--- a/src/css/common.css
+++ b/src/css/common.css
@@ -2,7 +2,7 @@
     box-sizing:border-box;
 }
 
-html,body,.application,.side-area, .side-nav, .category-title, .category__item, .category-list, .category-list-inner, .category-list__item, .category-list-wrapper { 
+html,body,.App,#root,.application,.side-area, .side-nav, .category-title, .category__item, .category-list, .category-list-inner, .category-list__item, .category-list-wrapper {
     min-height:100%;
     height:100%; 
 }
