CSS修正＆勤怠一覧画面HTML変更

--- a/src/css/dakoku.css
+++ b/src/css/dakoku.css
@@ -1,12 +1,12 @@
 
-.content {
+.content.time {
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.side-area{
+.side-area.time{
     width: 30%;
     height: 100%;
     box-sizing: border-box;
