csv取り込み、bootstrap廃止

--- a/src/css/kintai.css
+++ b/src/css/kintai.css
@@ -135,3 +135,7 @@
     margin:0.25em 0.5em 0 0.5em;
     background: rgb(238, 209, 214);
 }
+
+.table-danger {
+    background: rgb(238, 209, 214);
+}
