--- a/src/css/common.css
+++ b/src/css/common.css
@@ -47,7 +47,7 @@ body::-webkit-scrollbar{
 
 .side-nav{ 
     box-sizing: border-box;
-    width: 15%;
+    width: 250px;
     background: #215968;
     color:white;
 }
@@ -71,6 +71,7 @@ body::-webkit-scrollbar{
 
 .category-list-wrapper {
     box-sizing: border-box;
+    width: 250px;
 }
 .category-list {
     list-style: none;
