input要素がdisabledのときは背景色等を表示しない

--- a/src/css/kintai.css
+++ b/src/css/kintai.css
@@ -164,4 +164,9 @@
     border-right: none;
 }
 
+.kintai-month-table-body__cell > input[type="text"][disabled] {
+    background-color: initial;
+    border: none;
+}
+
 
